[tool.poetry]
name = "investbot"
version = "0.1.0"
description = ""
authors = ["ViktorDavydov <davydov.viktor.andreevich@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
telebot = "^0.0.5"
bs4 = "^0.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
